Down and up functions use the same methods as left and right , but transposed . Currrently working on a bug with the "right" shift operations

--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -5,5 +5,6 @@ body {
   align-items: center;
 }
 h1 {
-  color: purple;
+  margin-top: 100px;
+  color: brown;
 }
