--- a/src/_reset.scss
+++ b/src/_reset.scss
@@ -3,4 +3,5 @@
   margin: 0;
   padding: 0;
   font-family: "poppins", sans-serif;
+  background-color: beige;
 }
